# axum-test

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.webapp  README.md  compose.yml  docker-compose.yml
api/: Cargo.toml
api/.sqlx/: query-3a58bcb0342e5661b65358a133386706cea1a948aeed0f91f506a18da8384218.json  query-553659ee1831f0dc75b18e958a265be086105b9c984c624fb2f0125f86b6d185.json  query-5b5b5cfccc80012468a5b9cfd83b45649359226df9f79d17839fc7e85479cf85.json  query-6448c2806ebc3d19b07aa4afb9917d2f7c782b4d131c20ec29195af221f2375e.json  query-6caec6efccb20f67015336c129bccc841a73a58133bdea1e5e7fd3074328004c.json  query-6d05fdf489f1662cd26e09bd169c09ebb8ce22fd546d47465fc69bfb26409af6.json  query-7b936469d797f22cf856572f09c7ecd3c6402d93bff37997bb6a8758f47a9b14.json  query-92c9fa3a85badca802415bb3599bf85613fc9cbfb825d54913574feaf3c17553.json  query-a86ab23ffb832b017aac5bc5897c97ef2f80cc360a2fc5fa239f5e8ebc5fc198.json  query-aa627915d64009977d61704e1c4a50c5086f90e72df48e7f7a7f165e03ca4a08.json  query-c73dd4f7776c650ebc069891a7f5d58d979439fe0f7b49c9d030861d8670ba2b.json  query-f02d7b85fb819b37f05838854c0918bf222e850cfdb8fd7f27dfff31a63fce63.json
api/src/: error.rs  layers.rs  main.rs
api/src/handlers/: login_handlers.rs  message_handlers.rs  mod.rs  user_handlers.rs
api/src/layers/: authentication.rs  logging.rs
api/src/routes/: login_routes.rs  message_routes.rs  mod.rs  user_routes.rs
elastic/: api-log-*.json  api-request-log.json
models/: Cargo.toml
models/src/: lib.rs  login_models.rs  message_models.rs  user_models.rs
sql/: 01-databases.sql  02-schemas.sql  03-tables.sql  04-data.sql  tables.sql
src/: error.rs  main.rs
src/handlers/: user_handlers.rs
src/layers/: logging.rs  mod.rs  request_logging.rs
src/models/: user_models.rs
src/routes/: mod.rs  user_routes.rs
webapp/: Cargo.toml  Dioxus.toml  index.html
webapp/assets/: style.css
webapp/src/: main.rs  message.rs  message_list.rs  navbar.rs
webapp/src/components/: mod.rs  navbar.rs
webapp/src/components/message/: message_display.rs  message_list.rs  mod.rs
webapp/src/components/user/: mod.rs  user_info_card.rs
webapp/src/layouts/: mod.rs  with_navbar_footer.rs
webapp/src/pages/: chat.rs  login.rs  mod.rs  register.rs  user_profile.rs
