[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
axum = "0.7.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "chrono",
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
elasticsearch = "8.5.0-alpha.1"
