[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
] }
reqwest = { version = "0.12.7", default-features = false, features = [
  "rustls-tls",
] }
chrono = { version = "0.4.38", features = ["serde"] }
elasticsearch = { version = "8.5.0-alpha.1", default-features = false, features = [
  "rustls-tls",
] }
models = { path = "../models", features = ["sqlx"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
