[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "chrono",
] }
serde = { version = "1.0.203", features = ["derive"] }
