[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres"], optional = true }
serde = { version = "1.0.203", features = ["derive"] }

[features]
default = []
sqlx = ["dep:sqlx"]
