[package]
name = "webapp"
version = "0.1.0"
authors = ["Kellian <kellian.bechtel@viacesi.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
reqwest = { version = "0.11.27", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
models = { path = "../models" }

# Debug
dioxus-logger = "0.5.1"
getrandom = { version = "0.2.15", features = ["js"] }
